add config and add api
